--- a/Resources/Base.lproj/DOSImportWindow.xib
+++ b/Resources/Base.lproj/DOSImportWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17132.0.2" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17132.0.2"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,7 +14,7 @@
                 <outlet property="loadingSpinner" destination="1008" id="1012"/>
                 <outlet property="programPanel" destination="893" id="917"/>
                 <outlet property="programPanelController" destination="950" id="953"/>
-                <outlet property="renderingView" destination="1007" id="1010"/>
+                <outlet property="renderingView" destination="82L-xS-0g2" id="apd-zo-UKp"/>
                 <outlet property="statusBar" destination="3" id="918"/>
                 <outlet property="statusBarController" destination="926" id="983"/>
                 <outlet property="window" destination="1" id="169"/>
@@ -22,23 +22,23 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="1" customClass="BXDOSWindow">
+        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="1" customClass="BXDOSWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="400" y="200" width="640" height="570"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1055"/>
             <view key="contentView" id="2">
                 <rect key="frame" x="0.0" y="0.0" width="640" height="570"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView id="3" userLabel="Status bar">
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3" userLabel="Status bar">
                         <rect key="frame" x="0.0" y="0.0" width="640" height="26"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <customView id="985">
+                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="985">
                                 <rect key="frame" x="498" y="0.0" width="122" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <button verticalHuggingPriority="750" id="986">
+                                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="986">
                                         <rect key="frame" x="0.0" y="4" width="19" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="Volume0PercentCroppedTemplate" imagePosition="only" alignment="center" controlSize="small" state="on" borderStyle="border" inset="2" id="991">
@@ -49,7 +49,7 @@
                                             <action selector="minimizeVolume:" target="-1" id="993"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" id="987">
+                                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="987">
                                         <rect key="frame" x="95" y="4" width="27" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="Volume100PercentTemplate" imagePosition="only" alignment="center" controlSize="small" state="on" borderStyle="border" inset="2" id="990">
@@ -60,7 +60,7 @@
                                             <action selector="maximizeVolume:" target="-1" id="992"/>
                                         </connections>
                                     </button>
-                                    <slider focusRingType="none" verticalHuggingPriority="750" id="988">
+                                    <slider focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="988">
                                         <rect key="frame" x="21" y="5" width="72" height="15"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <sliderCell key="cell" controlSize="small" continuous="YES" state="on" focusRingType="none" alignment="left" maxValue="1" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="989" customClass="BXIndentedSliderCell"/>
@@ -74,7 +74,7 @@
                                     </slider>
                                 </subviews>
                             </customView>
-                            <segmentedControl verticalHuggingPriority="750" id="907">
+                            <segmentedControl verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="907">
                                 <rect key="frame" x="8" y="3" width="100" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <segmentedCell key="cell" controlSize="small" state="on" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="selectAny" id="908">
@@ -91,7 +91,7 @@
                                     <action selector="performSegmentedButtonAction:" target="926" id="929"/>
                                 </connections>
                             </segmentedControl>
-                            <textField verticalHuggingPriority="750" tag="2" id="909">
+                            <textField verticalHuggingPriority="750" fixedFrame="YES" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="909">
                                 <rect key="frame" x="185" y="6" width="270" height="14"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Cmd-click to lock the mouse to the window." id="910">
@@ -102,33 +102,33 @@
                             </textField>
                         </subviews>
                     </customView>
-                    <customView id="893" userLabel="Import Tips Panel Container" customClass="BXBlueprintPanel">
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="893" userLabel="Import Tips Panel Container" customClass="BXBlueprintPanel">
                         <rect key="frame" x="0.0" y="26" width="640" height="64"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </customView>
-                    <customView id="924" userLabel="Window Content Wrapper" customClass="BXBlueprintBackgroundView">
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="924" userLabel="Window Content Wrapper" customClass="BXBlueprintBackgroundView">
                         <rect key="frame" x="0.0" y="90" width="640" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <customView id="999" userLabel="Panel Transition Wrapper">
+                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="999" userLabel="Panel Transition Wrapper">
                                 <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <customView hidden="YES" id="1001" userLabel="DOS Input View" customClass="BXInputView">
+                                    <customView hidden="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1001" userLabel="DOS Input View" customClass="BXInputView">
                                         <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <openGLView focusRingType="none" rendererType="accelerated" useAuxiliaryDepthBufferStencil="NO" useDoubleBufferingEnabled="YES" useRecovery="YES" wantsBestResolutionOpenGLSurface="YES" id="1007" customClass="BXGLRenderingView">
+                                            <customView wantsLayer="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="82L-xS-0g2" customClass="BXMetalRenderingView">
                                                 <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            </openGLView>
+                                            </customView>
                                         </subviews>
                                     </customView>
-                                    <customView id="1000" userLabel="Loading view">
+                                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1000" userLabel="Loading view">
                                         <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <customView id="1008" customClass="BXBlueprintProgressIndicator">
+                                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1008" customClass="BXBlueprintProgressIndicator">
                                                 <rect key="frame" x="242" y="160" width="156" height="160"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                             </customView>
@@ -145,6 +145,7 @@
                 <outlet property="actualContentView" destination="924" id="984"/>
                 <outlet property="delegate" destination="-2" id="529"/>
             </connections>
+            <point key="canvasLocation" x="87" y="125"/>
         </window>
         <viewController id="926" customClass="BXStatusBarController">
             <connections>
@@ -166,8 +167,8 @@
         </viewController>
     </objects>
     <resources>
-        <image name="NSLockUnlockedTemplate" width="10" height="14"/>
-        <image name="NSRevealFreestandingTemplate" width="14" height="14"/>
+        <image name="NSLockUnlockedTemplate" width="18" height="13"/>
+        <image name="NSRevealFreestandingTemplate" width="15" height="13"/>
         <image name="PanelExpandTemplate" width="13" height="12"/>
         <image name="Volume0PercentCroppedTemplate" width="7" height="12"/>
         <image name="Volume100PercentTemplate" width="17" height="16"/>
