--- a/Resources/Base.lproj/DOSWindow.xib
+++ b/Resources/Base.lproj/DOSWindow.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17132.0.2" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
-        <capability name="box content view" minToolsVersion="7.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17132.0.2"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,7 +15,7 @@
                 <outlet property="loadingPanel" destination="1251" id="1252"/>
                 <outlet property="loadingSpinner" destination="1253" id="1254"/>
                 <outlet property="panelWrapper" destination="1244" id="SKg-qj-KNn"/>
-                <outlet property="renderingView" destination="970" id="UjQ-I3-dBH"/>
+                <outlet property="renderingView" destination="UZp-TA-dmD" id="ygx-Ud-GCZ"/>
                 <outlet property="statusBar" destination="3" id="918"/>
                 <outlet property="statusBarController" destination="926" id="983"/>
                 <outlet property="window" destination="1" id="169"/>
@@ -24,19 +23,19 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="1" customClass="BXDOSWindow">
+        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="1" customClass="BXDOSWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="400" y="240" width="640" height="506"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1055"/>
             <view key="contentView" id="2">
                 <rect key="frame" x="0.0" y="0.0" width="640" height="506"/>
-                <autoresizingMask key="autoresizingMask"/>
+                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <customView id="3" userLabel="Status bar">
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3" userLabel="Status bar">
                         <rect key="frame" x="0.0" y="0.0" width="640" height="26"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField verticalHuggingPriority="750" tag="2" id="909">
+                            <textField verticalHuggingPriority="750" fixedFrame="YES" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="909">
                                 <rect key="frame" x="33" y="6" width="321" height="14"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Cmd-click to lock the mouse pointer to the window." id="910">
@@ -45,7 +44,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <button verticalHuggingPriority="750" id="1442">
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1442">
                                 <rect key="frame" x="7" y="4" width="24" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="NSLockUnlockedTemplate" imagePosition="overlaps" alignment="center" alternateImage="NSLockLockedTemplate" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="1443">
@@ -58,29 +57,29 @@
                             </button>
                         </subviews>
                     </customView>
-                    <customView id="924" userLabel="Window Content Wrapper" customClass="BXDOSWindowBackgroundView">
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="924" userLabel="Window Content Wrapper" customClass="BXDOSWindowBackgroundView">
                         <rect key="frame" x="0.0" y="26" width="640" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <customView id="1244" userLabel="Panel Transition Wrapper">
+                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1244" userLabel="Panel Transition Wrapper">
                                 <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <customView hidden="YES" id="978" userLabel="DOS Input View" customClass="BXInputView">
+                                    <customView hidden="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="978" userLabel="DOS Input View" customClass="BXInputView">
                                         <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <openGLView focusRingType="none" rendererType="accelerated" useAuxiliaryDepthBufferStencil="NO" useDoubleBufferingEnabled="YES" useRecovery="YES" wantsBestResolutionOpenGLSurface="YES" id="970" customClass="BXGLRenderingView">
+                                            <customView wantsLayer="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UZp-TA-dmD" customClass="BXMetalRenderingView">
                                                 <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            </openGLView>
+                                            </customView>
                                         </subviews>
                                     </customView>
-                                    <customView id="1251" userLabel="Loading view">
+                                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1251" userLabel="Loading view">
                                         <rect key="frame" x="0.0" y="0.0" width="640" height="480"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <customView id="1253" customClass="BXHUDSpinningProgressIndicator">
+                                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1253" customClass="BXHUDSpinningProgressIndicator">
                                                 <rect key="frame" x="242" y="160" width="156" height="160"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                             </customView>
@@ -157,7 +156,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="130" height="22"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <slider toolTip="Adjust the volume" focusRingType="none" verticalHuggingPriority="750" id="2UX-hR-kRW">
+                                    <slider toolTip="Adjust the volume" focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2UX-hR-kRW">
                                         <rect key="frame" x="29" y="7" width="72" height="15"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <sliderCell key="cell" controlSize="small" continuous="YES" state="on" focusRingType="none" alignment="left" maxValue="1" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="eHh-bb-mnd"/>
@@ -169,7 +168,7 @@
                                             </binding>
                                         </connections>
                                     </slider>
-                                    <button toolTip="Set the volume to maximum" verticalHuggingPriority="750" id="ktK-fd-rsN">
+                                    <button toolTip="Set the volume to maximum" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ktK-fd-rsN">
                                         <rect key="frame" x="102" y="5" width="27" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="Volume100PercentTemplate" imagePosition="only" alignment="center" controlSize="small" state="on" borderStyle="border" inset="2" id="w0L-iR-Af7">
@@ -180,7 +179,7 @@
                                             <action selector="maximizeVolume:" target="-1" id="6XR-E5-kGe"/>
                                         </connections>
                                     </button>
-                                    <button toolTip="Mute the volume" verticalHuggingPriority="750" id="32N-s1-9hf">
+                                    <button toolTip="Mute the volume" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="32N-s1-9hf">
                                         <rect key="frame" x="6" y="5" width="22" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="Volume0PercentCroppedTemplate" imagePosition="overlaps" alignment="center" controlSize="small" borderStyle="border" inset="2" id="bVp-0Y-J3v">
@@ -207,7 +206,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="130" height="22"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <button toolTip="Decrease the CPU speed" verticalHuggingPriority="750" id="1420">
+                                    <button toolTip="Decrease the CPU speed" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1420">
                                         <rect key="frame" x="0.0" y="5" width="29" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="TurtleTemplate" imagePosition="only" alignment="center" controlSize="small" continuous="YES" state="on" borderStyle="border" inset="2" id="1421">
@@ -218,7 +217,7 @@
                                             <action selector="decrementSpeed:" target="-1" id="1435"/>
                                         </connections>
                                     </button>
-                                    <button toolTip="Increase the CPU speed" verticalHuggingPriority="750" id="1419">
+                                    <button toolTip="Increase the CPU speed" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1419">
                                         <rect key="frame" x="101" y="5" width="29" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="BunnyTemplate" imagePosition="only" alignment="center" controlSize="small" continuous="YES" state="on" borderStyle="border" inset="2" id="1422">
@@ -229,7 +228,7 @@
                                             <action selector="incrementSpeed:" target="-1" id="1434"/>
                                         </connections>
                                     </button>
-                                    <slider toolTip="Adjust the emulated CPU speed" focusRingType="none" verticalHuggingPriority="750" id="1418">
+                                    <slider toolTip="Adjust the emulated CPU speed" focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1418">
                                         <rect key="frame" x="29" y="5" width="72" height="17"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <sliderCell key="cell" controlSize="small" continuous="YES" state="on" focusRingType="none" alignment="left" maxValue="1" doubleValue="1" tickMarkPosition="below" numberOfTickMarks="6" sliderType="linear" id="1423"/>
@@ -345,6 +344,7 @@
                 <outlet property="actualContentView" destination="924" id="984"/>
                 <outlet property="delegate" destination="-2" id="529"/>
             </connections>
+            <point key="canvasLocation" x="21" y="113"/>
         </window>
         <viewController id="926" customClass="BXStatusBarController">
             <connections>
@@ -388,10 +388,10 @@
         <image name="DocumentationTemplate" width="16" height="16"/>
         <image name="FastForwardTemplate" width="19" height="13"/>
         <image name="LauncherListTemplate" width="16" height="13"/>
-        <image name="NSLockLockedTemplate" width="10" height="14"/>
-        <image name="NSLockUnlockedTemplate" width="10" height="14"/>
-        <image name="NSRefreshTemplate" width="11" height="15"/>
-        <image name="NSRevealFreestandingTemplate" width="14" height="14"/>
+        <image name="NSLockLockedTemplate" width="15" height="13"/>
+        <image name="NSLockUnlockedTemplate" width="18" height="13"/>
+        <image name="NSRefreshTemplate" width="14" height="14"/>
+        <image name="NSRevealFreestandingTemplate" width="15" height="13"/>
         <image name="PauseTemplate" width="10" height="13"/>
         <image name="PlayTemplate" width="10" height="13"/>
         <image name="ScreenshotTemplate" width="16" height="12"/>
